--- a/assignments/2021-11-30-exercises08.html
+++ b/assignments/2021-11-30-exercises08.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>2021-11-13-exercises07 - MTH201</title>
+  <title>2021-11-30-exercises08 - MTH201</title>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
@@ -40,36 +40,27 @@
     <section id="pagecontent">
         <article>
     <section class="header">
-        <h1>Exercise sheet 7</h1>
+        <h1>Exercise sheet 8</h1>
     </section>
     <section>
       <p>
 	
-	<a href="../assignments/2021-10-26-exercise06.html" class="prev"><<</a>
+	<a href="../assignments/2021-11-13-exercises07.html" class="prev"><<</a>
 	
-	
-	<a href="../assignments/2021-11-30-exercises08.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 03:04 AM - 20 November, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 04:18 PM - 30 November, 2021 </strong></p>
 	  
-	  <a href="../assignments/pdfs/2021-11-13-exercises07.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
 	  
-        <p>For all these questions, <span class="math inline">\(\mathbf{\hat{n}}(p):=\sigma_x(p)\times \sigma_y(p)\)</span></p>
+        <ol>
+<li><p>Let <span class="math inline">\(f : S_1 \to S_2\)</span> denote a smooth function that between surfaces that is 1-1, onto, its inverse is smooth, and so that <span class="math inline">\(f^*\langle \mathbf{v}, \mathbf{w} \rangle = \langle \mathbf{v}, \mathbf{w} \rangle\)</span> and let <span class="math inline">\(\sigma_1 : U \to S_1\)</span> denote a surface patch on <span class="math inline">\(S_1\)</span>. Let <span class="math inline">\(\sigma_2 = f \circ \sigma_1\)</span></p>
 <ol>
-<li><p>Prove that <span class="math inline">\(\mathbf{\hat{n}}(\gamma(t))\)</span> is perpendicular to <span class="math inline">\(\mathbf{T}(t)\)</span>.</p></li>
-<li><p>Prove that <span class="math inline">\(\mathbf{N}(t) = \mathbf{\hat{n}}(t)\)</span> if and only if <span class="math inline">\(\kappa_g(t)=0\)</span></p></li>
-<li><p>Prove that the area can be expressed entirely in terms of the first fundamental form. <span class="math display">\[A_\sigma(R) = \int_R \sqrt{E(x,y) G(x,y) - F^2(x,y)}\mathrm{d}x\mathrm{d}y\]</span></p></li>
-<li><p>How does the matrix of the first fundamental form vary with a coordinate transformation?</p></li>
-<li><p>Prove that if the surface patch is regular then the matrix of the first fundamental form is invertible.</p></li>
-<li><p>Recall the definition of <span class="math inline">\(D_p(f) : T_p(S) \to T_p(S)\)</span></p>
-<ol>
-<li><p>Show that <span class="math inline">\(D_p(Id_S) = Id_{T_p(S)}\)</span></p></li>
-<li><p>Show that <span class="math inline">\(D_p(f \circ g) = D_p(f) \circ D_p(g)\)</span> where <span class="math inline">\(g : S_1 \to S_2\)</span> and <span class="math inline">\(f : S_2 \to S_3\)</span> are smooth functions between surfaces.</p></li>
-<li><p>Prove that if <span class="math inline">\(f\)</span> is smooth with a smooth inverse, then <span class="math inline">\(D_p(f)\)</span> is invertible.</p></li>
+<li><p>Show that <span class="math inline">\((\sigma_2)_x = D_p(f) (\sigma_1)_x\)</span> and <span class="math inline">\((\sigma_2)_y = D_p(f) (\sigma_1)_y\)</span></p></li>
+<li><p>Show that if <span class="math inline">\((\sigma_1)_x \times (\sigma_1)_y\neq 0\)</span>, then <span class="math inline">\((\sigma_2)_x \times (\sigma_2)_y\neq 0\)</span></p></li>
+<li><p>We can then treat <span class="math inline">\(\sigma_2\)</span> as a surface patch for <span class="math inline">\(S_2\)</span>. Show that if <span class="math inline">\(E_1\)</span>, <span class="math inline">\(F_1\)</span>, <span class="math inline">\(G_1\)</span> denote the entries of the matrix of the first fundamental form with respect to <span class="math inline">\(\sigma_1\)</span> and <span class="math inline">\(E_2\)</span>, <span class="math inline">\(F_2\)</span>, <span class="math inline">\(G_2\)</span> denote the entries of the matrix of the first fundamental form with respect to <span class="math inline">\(\sigma_2\)</span>, then <span class="math inline">\(E_1= E_2\)</span>, <span class="math inline">\(F_1 = F_2\)</span>, and <span class="math inline">\(G_1 = G_3\)</span>.</p></li>
 </ol></li>
-<li><p>Prove that <span class="math inline">\(\mathcal{W}\mathbf{v}.\mathbf{w} = \mathcal{W}\mathbf{w}.\mathbf{v}\)</span></p></li>
 </ol>
     </section>
 </article>
