--- a/assignments/2021-11-30-exercises08.html
+++ b/assignments/2021-11-30-exercises08.html
@@ -49,18 +49,21 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 04:18 PM - 30 November, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 12:12 PM -  2 December, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
 	  
         <ol>
-<li><p>Let <span class="math inline">\(f : S_1 \to S_2\)</span> denote a smooth function that between surfaces that is 1-1, onto, its inverse is smooth, and so that <span class="math inline">\(f^*\langle \mathbf{v}, \mathbf{w} \rangle = \langle \mathbf{v}, \mathbf{w} \rangle\)</span> and let <span class="math inline">\(\sigma_1 : U \to S_1\)</span> denote a surface patch on <span class="math inline">\(S_1\)</span>. Let <span class="math inline">\(\sigma_2 = f \circ \sigma_1\)</span></p>
+<li><p>Let <span class="math inline">\(f : S_1 \to S_2\)</span> denote a smooth function that between surfaces that is 1-1, onto, its inverse is smooth, and so that <span class="math inline">\(f^*\langle \mathbf{v}, \mathbf{w} \rangle = \langle \mathbf{v}, \mathbf{w} \rangle\)</span> (called a local isometry) and let <span class="math inline">\(\sigma_1 : U \to S_1\)</span> denote a surface patch on <span class="math inline">\(S_1\)</span>. Let <span class="math inline">\(\sigma_2 = f \circ \sigma_1\)</span></p>
 <ol>
 <li><p>Show that <span class="math inline">\((\sigma_2)_x = D_p(f) (\sigma_1)_x\)</span> and <span class="math inline">\((\sigma_2)_y = D_p(f) (\sigma_1)_y\)</span></p></li>
 <li><p>Show that if <span class="math inline">\((\sigma_1)_x \times (\sigma_1)_y\neq 0\)</span>, then <span class="math inline">\((\sigma_2)_x \times (\sigma_2)_y\neq 0\)</span></p></li>
 <li><p>We can then treat <span class="math inline">\(\sigma_2\)</span> as a surface patch for <span class="math inline">\(S_2\)</span>. Show that if <span class="math inline">\(E_1\)</span>, <span class="math inline">\(F_1\)</span>, <span class="math inline">\(G_1\)</span> denote the entries of the matrix of the first fundamental form with respect to <span class="math inline">\(\sigma_1\)</span> and <span class="math inline">\(E_2\)</span>, <span class="math inline">\(F_2\)</span>, <span class="math inline">\(G_2\)</span> denote the entries of the matrix of the first fundamental form with respect to <span class="math inline">\(\sigma_2\)</span>, then <span class="math inline">\(E_1= E_2\)</span>, <span class="math inline">\(F_1 = F_2\)</span>, and <span class="math inline">\(G_1 = G_3\)</span>.</p></li>
+<li><p>Why does <span class="math inline">\(f\)</span> map geodesics to geodesics?</p></li>
 </ol></li>
+<li><p>Prove that the geodesic curvature of a curve in a plane (treated as a surface in <span class="math inline">\(\mathbb{R}^3\)</span>) is equal to the plane curvature.</p></li>
+<li><p>Compute the normal curvature of any curve on the sphere. Can you interpret the answer physically? Using this, prove that curves on the sphere that have constant geodesic curvature are circles.</p></li>
 </ol>
     </section>
 </article>
