--- a/assignments/2021-11-30-exercises08.html
+++ b/assignments/2021-11-30-exercises08.html
@@ -49,7 +49,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:12 PM -  2 December, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 12:34 PM -  2 December, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
@@ -63,7 +63,7 @@
 <li><p>Why does <span class="math inline">\(f\)</span> map geodesics to geodesics?</p></li>
 </ol></li>
 <li><p>Prove that the geodesic curvature of a curve in a plane (treated as a surface in <span class="math inline">\(\mathbb{R}^3\)</span>) is equal to the plane curvature.</p></li>
-<li><p>Compute the normal curvature of any curve on the sphere. Can you interpret the answer physically? Using this, prove that curves on the sphere that have constant geodesic curvature are circles.</p></li>
+<li><p>Compute the normal curvature of any curve on the sphere at a point in the region covered by the surface patch, <span class="math inline">\(\sigma(x,y) = (x, y, \sqrt{1 - x^2 - y^2})\)</span>. Can you interpret the answer physically? Using this, prove that curves on the sphere that have constant geodesic curvature are circles.</p></li>
 </ol>
     </section>
 </article>
