--- a/assignments/2021-11-30-exercises08.html
+++ b/assignments/2021-11-30-exercises08.html
@@ -54,6 +54,10 @@
 	  <a href="../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
 	  
+	  <br />
+	  <a href="../assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> / 
+	  <a href="../assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>
+	  
         <ol>
 <li><p>Let <span class="math inline">\(f : S_1 \to S_2\)</span> denote a smooth function that between surfaces that is 1-1, onto, its inverse is smooth, and so that <span class="math inline">\(f^*\langle \mathbf{v}, \mathbf{w} \rangle = \langle \mathbf{v}, \mathbf{w} \rangle\)</span> (called a local isometry) and let <span class="math inline">\(\sigma_1 : U \to S_1\)</span> denote a surface patch on <span class="math inline">\(S_1\)</span>. Let <span class="math inline">\(\sigma_2 = f \circ \sigma_1\)</span></p>
 <ol>
@@ -80,6 +84,9 @@
 	   /
 	  <a href="../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> /
+	  <a href="../assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
