--- a/assignments/2021-10-01-exercise04.html
+++ b/assignments/2021-10-01-exercise04.html
@@ -90,6 +90,9 @@
 	   /
 	  <a href="../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> /
+	  <a href="../assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
