--- a/assignments/solutions/2021-09-13-exercise02.html
+++ b/assignments/solutions/2021-09-13-exercise02.html
@@ -99,6 +99,9 @@ We actually need to assume that <span class="math inline">\(\gamma\)</span> is r
 	   /
 	  <a href="../../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../../assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> /
+	  <a href="../../assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
