--- a/assignments/solutions/2021-10-10-exercise05.html
+++ b/assignments/solutions/2021-10-10-exercise05.html
@@ -109,6 +109,9 @@ By the previous parts, the (tangential) circle would be too big or too small unl
 	   /
 	  <a href="../../assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../../assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> /
+	  <a href="../../assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
