--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ Room 7: MS20207 -</p>
 	   /
 	  <a href="./assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="./assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> /
+	  <a href="./assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
