--- a/slides.html
+++ b/slides.html
@@ -142,6 +142,9 @@ Ideally, view these slides in presentation mode on your PDF viewer (F5 in some v
 	   /
 	  <a href="./assignments/pdfs/2021-11-30-exercises08.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="./assignments/solutions/2021-11-30-exercises08.html">Hints or Solutions</a> /
+	  <a href="./assignments/solutions/pdfs/2021-11-30-exercises08.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
