--- a/assignments/2021-09-10-exercise01.html
+++ b/assignments/2021-09-10-exercise01.html
@@ -41,6 +41,8 @@
       <p>
 	
 	
+	<a href="../assignments/2022-09-12-exercise02.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 05:42 PM - 29 August, 2022 </strong></p>
 	  
@@ -77,6 +79,14 @@
 
     <h2>Latest exercise sheet</h2>
 <ul>
+    
+        <li>
+          <a href="../assignments/2022-09-12-exercise02.html">Exercise sheet 2</a>
+	   /
+	  <a href="../assignments/pdfs/2022-09-12-exercise02.pdf">PDF version</a>
+	  
+	  
+        </li>
     
         <li>
           <a href="../assignments/2021-09-10-exercise01.html">Exercise sheet 1</a>
