--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 <ul>
     
         <li>
+          <a href="./assignments/2022-09-12-exercise02.html">Exercise sheet 2</a>
+	   /
+	  <a href="./assignments/pdfs/2022-09-12-exercise02.pdf">PDF version</a>
+	  
+	  
+        </li>
+    
+        <li>
           <a href="./assignments/2021-09-10-exercise01.html">Exercise sheet 1</a>
 	   /
 	  <a href="./assignments/pdfs/2021-09-10-exercise01.pdf">PDF version</a>
