--- a/assignments/2021-09-10-exercise01.html
+++ b/assignments/2021-09-10-exercise01.html
@@ -49,6 +49,10 @@
 	  <a href="../assignments/pdfs/2021-09-10-exercise01.pdf">PDF version</a>
 	  
 	  
+	  <br />
+	  <a href="../assignments/solutions/2021-09-10-exercise01.html">Hints or Solutions</a> / 
+	  <a href="../assignments/solutions/pdfs/2021-09-10-exercise01.pdf">Hints or Solutions PDF</a>
+	  
         <ol>
 <li><p>Find a parametrization <span class="math inline">\(\gamma(t)\)</span> for a line segment joining two given points <span class="math inline">\((x_1. y_1)\)</span> and <span class="math inline">\((x_2. y_2)\)</span>. Find <span class="math inline">\(\dot{\gamma}(t)\)</span>.</p></li>
 <li><p>What does the parametrization trace out <span class="math inline">\(\gamma(t) = (\frac{2t}{1+t^2}, \frac{1-t^2}{1+t^2})\)</span>?</p></li>
@@ -93,6 +97,9 @@
 	   /
 	  <a href="../assignments/pdfs/2021-09-10-exercise01.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../assignments/solutions/2021-09-10-exercise01.html">Hints or Solutions</a> /
+	  <a href="../assignments/solutions/pdfs/2021-09-10-exercise01.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
