--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 	   /
 	  <a href="./assignments/pdfs/2021-09-10-exercise01.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="./assignments/solutions/2021-09-10-exercise01.html">Hints or Solutions</a> /
+	  <a href="./assignments/solutions/pdfs/2021-09-10-exercise01.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
