--- a/slides.html
+++ b/slides.html
@@ -61,6 +61,9 @@ Ideally, view these slides in presentation mode on your PDF viewer (F5 in some v
 	   /
 	  <a href="./assignments/pdfs/2021-09-10-exercise01.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="./assignments/solutions/2021-09-10-exercise01.html">Hints or Solutions</a> /
+	  <a href="./assignments/solutions/pdfs/2021-09-10-exercise01.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
