--- a/assignments/2021-09-10-exercise01.html
+++ b/assignments/2021-09-10-exercise01.html
@@ -28,6 +28,9 @@
           <a href="../assignments.html">Exercise sheets</a>
 	  
 	  
+	  
+          <a href="../slides.html">Last year's slides</a>
+	  
         </menu>
 	</div>
     </nav>
