--- a/assignments/2022-09-12-exercise02.html
+++ b/assignments/2022-09-12-exercise02.html
@@ -28,6 +28,9 @@
           <a href="../assignments.html">Exercise sheets</a>
 	  
 	  
+	  
+          <a href="../slides.html">Last year's slides</a>
+	  
         </menu>
 	</div>
     </nav>
