--- a/assignments/2022-10-11-exercise04.html
+++ b/assignments/2022-10-11-exercise04.html
@@ -47,15 +47,15 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:53 PM - 11 October, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 10:24 AM - 12 October, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
 	  
 	  
         <ol>
-<li><p>Prove that <span class="math inline">\(\ddot{\gamma}(t).\mathbf{n}(\gamma(t)) = -\dot{\gamma}(t).\frac{\mathrm{d}}{\mathrm{d}t}\mathbf{n}(\gamma(t))\)</span>. (<em>Hint</em>: You have done similar things many times before. Which rule helps you?)</p></li>
-<li><p>Use the chain rule to show that <span class="math inline">\(\frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\mathbf{n}(\gamma(t)) = \frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\mathbf{n}(\delta(t))\)</span> if <span class="math inline">\(\gamma(t_0) = \delta(t_0)\)</span> and <span class="math inline">\(\dot{\gamma}(t_0) = \dot{\delta}(t_0)\)</span>. In other words, the derivative is the same for curves which pass through the same point <span class="math inline">\(\gamma(t_0)\)</span> and have the same velocity vectors. (<em>Hint</em>: Look at everything from the point of view of the coordinate patch and apply chain rule).</p></li>
-<li><p>Can you see how the previous two exercises show that for a unit speed parametrization <span class="math inline">\(\gamma\)</span>, the quantity <span class="math inline">\(\ddot{\gamma}(t).\mathbf{n}(\gamma(t))\)</span> depends only on the point and direction.</p></li>
+<li><p>Prove that <span class="math inline">\(\ddot{\gamma}(t).\mathbf{\hat{n}}(\gamma(t)) = -\dot{\gamma}(t).\frac{\mathrm{d}}{\mathrm{d}t}\mathbf{\hat{n}}(\gamma(t))\)</span>. Here <span class="math inline">\(\mathbb{\hat{n}}\)</span> denotes the normal to a surface. (<em>Hint</em>: You have done similar things many times before. Which rule helps you?)</p></li>
+<li><p>Use the chain rule to show that <span class="math inline">\(\frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\mathbf{\hat{n}}(\gamma(t)) = \frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\mathbf{\hat{n}}(\delta(t))\)</span> if <span class="math inline">\(\gamma(t_0) = \delta(t_0)\)</span> and <span class="math inline">\(\dot{\gamma}(t_0) = \dot{\delta}(t_0)\)</span>. In other words, the derivative is the same for curves which pass through the same point <span class="math inline">\(\gamma(t_0)\)</span> and have the same velocity vectors. (<em>Hint</em>: Look at everything from the point of view of the coordinate patch and apply chain rule).</p></li>
+<li><p>Can you see how the previous two exercises show that for a unit speed parametrization <span class="math inline">\(\gamma\)</span>, the quantity <span class="math inline">\(\ddot{\gamma}(t).\mathbf{\hat{n}}(\gamma(t))\)</span> depends only on the point and direction.</p></li>
 </ol>
     </section>
 </article>
