--- a/assignments/2022-10-11-exercise04.html
+++ b/assignments/2022-10-11-exercise04.html
@@ -47,7 +47,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 03:58 PM - 17 October, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 04:01 PM - 17 October, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
 	  
@@ -58,6 +58,8 @@
 <li><p>Can you see how the previous two exercises show that for a unit speed parametrization <span class="math inline">\(\gamma\)</span>, the quantity <span class="math inline">\(\ddot{\gamma}(t).\mathbf{\hat{n}}(\gamma(t))\)</span> depends only on the point and direction.</p></li>
 <li><p>Prove that <span class="math inline">\(\mathbf{\hat{n}}(\gamma(t))\)</span> is perpendicular to <span class="math inline">\(\mathbf{T}(t)\)</span>, where <span class="math inline">\(\mathbf{T}(t)\)</span> is the unit tangent of <span class="math inline">\(\gamma\)</span> at <span class="math inline">\(t\)</span>.</p></li>
 <li><p>Consider a parametrization, <span class="math inline">\(\gamma(t)\)</span> and let <span class="math inline">\(\mathbf{N}(t)\)</span> denote its unit normal at <span class="math inline">\(t\)</span>. Prove that <span class="math inline">\(\mathbf{N}(t) = \mathbf{\hat{n}}(\gamma(t))\)</span> if and only if <span class="math inline">\(\kappa_g(t)=0\)</span></p></li>
+<li><p>Consider the sphere of radius 1. Give it a surface patch and use that to compute the normal curvature of a unit speed parametrization of any curve on the sphere at any given point.</p></li>
+<li><p>Consider any plane. Give it a surface patch and use that to compute the normal curvature of a unit speed parametrization of any curve on that plane at any given point.</p></li>
 </ol>
     </section>
 </article>
