--- a/assignments/2022-10-11-exercise04.html
+++ b/assignments/2022-10-11-exercise04.html
@@ -46,6 +46,8 @@
 	<a href="../assignments/2022-10-03-exercise03.html" class="prev"><<</a>
 	
 	
+	<a href="../assignments/2022-10-26-exercise05.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 04:01 PM - 17 October, 2022 </strong></p>
 	  
@@ -72,17 +74,17 @@
 <ul>
     
         <li>
-          <a href="../assignments/2022-10-11-exercise04.html">Exercise sheet 4</a>
+          <a href="../assignments/2022-10-26-exercise05.html">Exercise sheet 5</a>
 	   /
-	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2022-10-26-exercise05.pdf">PDF version</a>
 	  
 	  
         </li>
     
         <li>
-          <a href="../assignments/2022-10-03-exercise03.html">Exercise sheet 3</a>
+          <a href="../assignments/2022-10-11-exercise04.html">Exercise sheet 4</a>
 	   /
-	  <a href="../assignments/pdfs/2022-10-03-exercise03.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
 	  
 	  
         </li>
