--- a/assignments/2022-10-26-exercise05.html
+++ b/assignments/2022-10-26-exercise05.html
@@ -47,7 +47,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 05:43 PM - 26 October, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 05:46 PM - 26 October, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-10-26-exercise05.pdf">PDF version</a>
 	  
@@ -71,7 +71,12 @@
 </ol></li>
 <li><p>Show that <span class="math inline">\(\sigma_x(x_0,y_0)\)</span> and <span class="math inline">\(\sigma_y(x_0,y_0)\)</span> are each velocity vectors of curves that lie on the surface. Why are they linearly independent?</p></li>
 <li><p>Why do the previous two exercises show that <span class="math inline">\(\sigma_x(x_0,y_0)\)</span> and <span class="math inline">\(\sigma_y(x_0,y_0)\)</span> are a basis for the tangent vectors?</p></li>
-<li><p>Consider a point <span class="math inline">\(p\)</span> on the part of the surface covered by a surface patch. Therefore, it is of the form <span class="math inline">\(p = \sigma(x_0, y_0)\)</span> for some <span class="math inline">\(x_0\)</span> an <span class="math inline">\(y_0\)</span>. Consider <span class="math inline">\(\hat{n}(p) = \sigma_x(x_0,y_0) \times \sigma_y(x_0,y_0)\)</span>. Why is its dot product with <span class="math inline">\(\sigma_x(x_0,y_0)\)</span> and <span class="math inline">\(\sigma_y(x_0,y_0)\)</span> zero? Why is its dot product with <em>any</em> tangent vector (of the surface at <span class="math inline">\(p\)</span>) zero?</p></li>
+<li><p>Consider a point <span class="math inline">\(p\)</span> on the part of the surface covered by a surface patch. Therefore, it is of the form <span class="math inline">\(p = \sigma(x_0, y_0)\)</span> for some <span class="math inline">\(x_0\)</span> an <span class="math inline">\(y_0\)</span>. Consider <span class="math inline">\(\hat{n}(p) = \sigma_x(x_0,y_0) \times \sigma_y(x_0,y_0)\)</span> which is a vector in <span class="math inline">\(\mathbb{R}^3\)</span> based at <span class="math inline">\(p\)</span>.</p>
+<ol>
+<li><p>Is it a tangent vector? Why or why not?</p></li>
+<li><p>Why is its dot product with <span class="math inline">\(\sigma_x(x_0,y_0)\)</span> and <span class="math inline">\(\sigma_y(x_0,y_0)\)</span> zero?</p></li>
+<li><p>Why is its dot product with <em>any</em> tangent vector (of the surface at <span class="math inline">\(p\)</span>) zero?</p></li>
+</ol></li>
 <li><p>Compute <span class="math inline">\(\hat{n}(p)\)</span> for any point <span class="math inline">\(p\)</span> on a sphere.</p></li>
 </ol>
     </section>
