--- a/assignments/2022-10-26-exercise05.html
+++ b/assignments/2022-10-26-exercise05.html
@@ -47,13 +47,13 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 02:01 AM - 27 October, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 02:03 AM - 27 October, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-10-26-exercise05.pdf">PDF version</a>
 	  
 	  
         <h1 id="additional-exercises">Additional exercises</h1>
-<p><strong>NOTE:</strong> These exercises repeat many of the concepts / exrecises covered earlier and are meant for you to identify gaps in your understanding. They are not exhaustive and the mid-semester examination will not be restricted to these questions, however, hopefully these questions will help you to revise some of the concepts.</p>
+<p><strong>NOTE:</strong> These exercises repeat many of the concepts / exrecises covered earlier and are meant for you to identify gaps in your understanding. It includes concepts covered during the lectures by breaking them down into smaller exercises. They are not exhaustive and the mid-semester examination will not be restricted to these questions, however, hopefully these questions will help you to revise some of the concepts.</p>
 <h2 id="curves-on-surfaces">Curves on surfaces</h2>
 <p>Let <span class="math inline">\(S \subset \mathbb{R}^3\)</span> be a part of a surface and <span class="math inline">\(\sigma : U \to S\)</span> be a regular surface patch.</p>
 <ol>
