--- a/assignments/2022-10-26-exercise05.html
+++ b/assignments/2022-10-26-exercise05.html
@@ -47,7 +47,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 02:03 AM - 27 October, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 02:09 AM - 27 October, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-10-26-exercise05.pdf">PDF version</a>
 	  
@@ -88,7 +88,7 @@
 </ol></li>
 <li><p>From now on, we will assume that <span class="math inline">\(\gamma\)</span> is a unit speed parametrization. Show that <span class="math inline">\(\ddot{\gamma}(t_0) . \hat{n}(\gamma(t_0)) = - \dot{\gamma}(t_0) . \frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\hat{n}(\gamma(t))\)</span>. Along with the previous exercise, this shows that the component of the acceleration in the direction of the normal, (denoted <span class="math inline">\(\kappa_n(t_0)\)</span>) depends only on the normal to the surface and the direction of a unit speed parametrization.</p></li>
 <li><p>Consider the other component of the acceleration, <span class="math inline">\(\ddot{\gamma}(t_0) - \ddot{\gamma}(t_0) . \hat{n}(\gamma(t_0))\)</span>. Why is <span class="math inline">\(\ddot{\gamma}(t_0)\)</span> perpendicular to <span class="math inline">\(\hat{n}(\gamma(t_0))\)</span>? Why is <span class="math inline">\(\ddot{\gamma}(t_0)\)</span> parallel to <span class="math inline">\(\mathbf{T}(t_0) \times \hat{n}(\gamma(t_0))\)</span>? Let the magnitude be denoted by <span class="math inline">\(\kappa_g(t_0)\)</span></p></li>
-<li><p>Show that <span class="math inline">\(\kappa^2(t_0) = \kappa_n^2(t_0) + \kappa_g^2(t_0)\)</span>.</p></li>
+<li><p>Show that <span class="math inline">\(\kappa^2(t_0) = \kappa_n^2(t_0) + \kappa_g^2(t_0)\)</span>. (<em>Hint:</em> <span class="math inline">\(\mathbf{T}(t_0)\)</span>, <span class="math inline">\(\hat{n}(\gamma(t_0))\)</span>, and <span class="math inline">\(\mathbf{T}(t_0) \times \hat{n}(\gamma(t_0))\)</span> form an orthonormal basis in <span class="math inline">\(\mathbb{R}^3\)</span>. Use the previous exercise.)</p></li>
 </ol>
 <h2 id="applications-of-the-inverse-function-theorem">Applications of the Inverse Function Theorem</h2>
 <p><strong>NOTE:</strong> This topic is a bit more advanced, however, luckily, you should be able to follow the rest of the course even if you do not understand the concepts covered in this section of the exercise set. In this course, the inverse function theorem is used only to justify smoothness of certain functions so that we are permitted to differentiate as much as we like. While it is certainly in the syllabus, since it is a an isolated and more difficult topic, it is better to worry about it only if you have understood the other more basic and more widely used concepts that are covered in the previous section of this exercise set.</p>
