--- a/assignments/2022-10-26-exercise05.html
+++ b/assignments/2022-10-26-exercise05.html
@@ -47,7 +47,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 11:49 AM - 27 October, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 11:53 AM - 27 October, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-10-26-exercise05.pdf">PDF version</a>
 	  
@@ -75,7 +75,7 @@
 <li><p>Why do the previous two exercises show that <span class="math inline">\(\sigma_x(x_0,y_0)\)</span> and <span class="math inline">\(\sigma_y(x_0,y_0)\)</span> are a basis for the tangent vectors?</p></li>
 <li><p>Compute <span class="math inline">\(\hat{\mathbf{n}}(p)\)</span> for any point <span class="math inline">\(p\)</span> on a plane. Show that it is constant.</p></li>
 <li><p>Compute <span class="math inline">\(\hat{\mathbf{n}}(p)\)</span> for any point <span class="math inline">\(p\)</span> on a sphere.</p></li>
-<li><p>Consider a point <span class="math inline">\(p\)</span> on the part of the surface covered by a surface patch. Therefore, it is of the form <span class="math inline">\(p = \sigma(x_0, y_0)\)</span> for some <span class="math inline">\(x_0\)</span> an <span class="math inline">\(y_0\)</span>. Consider <span class="math inline">\(\hat{\mathbf{n}}(p) = \sigma_x(x_0,y_0) \times \sigma_y(x_0,y_0)\)</span> which is a vector in <span class="math inline">\(\mathbb{R}^3\)</span> based at <span class="math inline">\(p\)</span>.</p>
+<li><p>Consider a point <span class="math inline">\(p\)</span> on the part of the surface covered by a surface patch. Therefore, it is of the form <span class="math inline">\(p = \sigma(x_0, y_0)\)</span> for some <span class="math inline">\(x_0\)</span> an <span class="math inline">\(y_0\)</span>. Consider <span class="math display">\[\hat{\mathbf{n}}(p) = \frac{\sigma_x(x_0,y_0) \times \sigma_y(x_0,y_0)}{\| \sigma_x(x_0,y_0) \times \sigma_y(x_0,y_0)\|}\]</span> which is a vector in <span class="math inline">\(\mathbb{R}^3\)</span> based at <span class="math inline">\(p\)</span>.</p>
 <ol>
 <li><p>Is it a tangent vector? Why or why not?</p></li>
 <li><p>Why is its dot product with <span class="math inline">\(\sigma_x(x_0,y_0)\)</span> and <span class="math inline">\(\sigma_y(x_0,y_0)\)</span> zero?</p></li>
