Hints and solutions

--- a/assignments/2022-10-11-exercise04.html
+++ b/assignments/2022-10-11-exercise04.html
@@ -54,6 +54,10 @@
 	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
 	  
 	  
+	  <br />
+	  <a href="../assignments/solutions/2022-10-11-exercise04.html">Hints or Solutions</a> / 
+	  <a href="../assignments/solutions/pdfs/2022-10-11-exercise04.pdf">Hints or Solutions PDF</a>
+	  
         <ol>
 <li><p>Prove that <span class="math inline">\(\ddot{\gamma}(t).\mathbf{\hat{n}}(\gamma(t)) = -\dot{\gamma}(t).\frac{\mathrm{d}}{\mathrm{d}t}\mathbf{\hat{n}}(\gamma(t))\)</span>. Here <span class="math inline">\(\mathbb{\hat{n}}\)</span> denotes the normal to a surface. (<em>Hint</em>: You have done similar things many times before. Which rule helps you?)</p></li>
 <li><p>Use the chain rule to show that <span class="math inline">\(\frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\mathbf{\hat{n}}(\gamma(t)) = \frac{\mathrm{d}}{\mathrm{d}t}|_{t=t_0}\mathbf{\hat{n}}(\delta(t))\)</span> if <span class="math inline">\(\gamma(t_0) = \delta(t_0)\)</span> and <span class="math inline">\(\dot{\gamma}(t_0) = \dot{\delta}(t_0)\)</span>. In other words, the derivative is the same for curves which pass through the same point <span class="math inline">\(\gamma(t_0)\)</span> and have the same velocity vectors. (<em>Hint</em>: Look at everything from the point of view of the coordinate patch and apply chain rule).</p></li>
@@ -86,6 +90,9 @@
 	   /
 	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../assignments/solutions/2022-10-11-exercise04.html">Hints or Solutions</a> /
+	  <a href="../assignments/solutions/pdfs/2022-10-11-exercise04.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
