--- a/assignments/2022-10-03-exercise03.html
+++ b/assignments/2022-10-03-exercise03.html
@@ -117,6 +117,9 @@
 	   /
 	  <a href="../assignments/pdfs/2022-10-11-exercise04.pdf">PDF version</a>
 	  
+	  <br /> 
+	   (<a href="../assignments/solutions/2022-10-11-exercise04.html">Hints or Solutions</a> /
+	  <a href="../assignments/solutions/pdfs/2022-10-11-exercise04.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
