--- a/assignments/2022-11-05-exercise06.html
+++ b/assignments/2022-11-05-exercise06.html
@@ -47,7 +47,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 01:40 PM -  6 November, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 03:49 PM - 13 November, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-11-05-exercise06.pdf">PDF version</a>
 	  
@@ -58,6 +58,19 @@
 <li><p>Give a surface patch for a sphere. Compute the first fundamental form using the surface patch.</p></li>
 <li><p>Give a surface patch for a plane. Compute the first fundamental form using the surface patch.</p></li>
 <li><p>How does the matrix associated with the first fundamental form change under a coordinate transformation?</p></li>
+<li><p>For the map <span class="math inline">\(f\)</span> in exercise 2, and compute <span class="math inline">\(\mathcal{D}_p(f)\)</span>.</p></li>
+<li><p>This exercise is to revise what is taught in the lecture. Recall the definition of the Weingarten map, which is denoted by <span class="math inline">\(\mathcal{W}_p\)</span></p>
+<ol>
+<li><p>Prove that <span class="math inline">\(\mathcal{W}_p(\sigma_x)=\hat{\tilde{\mathbf{n}}}_x\)</span> and <span class="math inline">\(\mathcal{W}_p(\sigma_y)=\hat{\tilde{\mathbf{n}}}_y\)</span></p></li>
+<li><p>Prove that <span class="math inline">\(\mathcal{W}(\mathbf{v})\)</span> lies in the tangent space for any tangent vector <span class="math inline">\(v\)</span>.</p></li>
+<li><p>Prove that the Weingarten map is a linear map.</p></li>
+<li><p>Therefore, it is enough to compute the Weingarten map for the basis tangent vectors <span class="math inline">\(\sigma_x\)</span> and <span class="math inline">\(\sigma_y\)</span> and we therefore need to find the coefficients <span class="math inline">\(a, b, c\)</span> and <span class="math inline">\(d\)</span>, below: <span class="math display">\[\mathcal{W}_p(\sigma_x)=a\sigma_x+b\sigma_y\]</span> <span class="math display">\[\mathcal{W}_p(\sigma_y)=c\sigma_x+d\sigma_y\]</span></p></li>
+<li><p>Define <span class="math inline">\(L:=\sigma_{xx} . \hat{\mathbf{n}}\)</span>, <span class="math inline">\(M:=\sigma_{xy} . \hat{\mathbf{n}}\)</span>, <span class="math inline">\(N:=\sigma_{yy} . \hat{\mathbf{n}}\)</span>. Prove that <span class="math inline">\(L= - \sigma_x.\hat{\mathbf{n}}_x\)</span>, <span class="math inline">\(M= - \sigma_x.\hat{\mathbf{n}}_y = - \sigma_y.\hat{\mathbf{n}}_x\)</span>, and <span class="math inline">\(N= - \sigma_y.\hat{\mathbf{n}}_y\)</span>. The following matrix is called the matrix of the matrix of the second fundamental form: <span class="math display">\[\begin{pmatrix}
+             L &amp; M\\
+             M &amp; N
+           \end{pmatrix}\]</span></p></li>
+<li><p>By taking the dot product on both sides of each of the two equations in part 4 by <span class="math inline">\(\sigma_x\)</span> and then by <span class="math inline">\(\sigma_y\)</span>, obtain 4 linear equations whose unknowns are <span class="math inline">\(a\)</span>, <span class="math inline">\(b\)</span>, <span class="math inline">\(c\)</span>, and <span class="math inline">\(d\)</span>. Compute <span class="math inline">\(a\)</span>, <span class="math inline">\(b\)</span>, <span class="math inline">\(c\)</span>, and <span class="math inline">\(d\)</span> in terms of the first fundamenal form (i.e. <span class="math inline">\(E\)</span>, <span class="math inline">\(F\)</span>, <span class="math inline">\(G\)</span>), and the second fundamental form (<span class="math inline">\(L\)</span>, <span class="math inline">\(M\)</span>, and <span class="math inline">\(N\)</span>).</p></li>
+</ol></li>
 </ol>
     </section>
 </article>
