--- a/assignments/2022-11-05-exercise06.html
+++ b/assignments/2022-11-05-exercise06.html
@@ -46,6 +46,8 @@
 	<a href="../assignments/2022-10-26-exercise05.html" class="prev"><<</a>
 	
 	
+	<a href="../assignments/2022-11-19-exercise07.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 03:49 PM - 13 November, 2022 </strong></p>
 	  
@@ -83,17 +85,17 @@
 <ul>
     
         <li>
-          <a href="../assignments/2022-11-05-exercise06.html">Exercise sheet 6</a>
+          <a href="../assignments/2022-11-19-exercise07.html">Exercise sheet 7</a>
 	   /
-	  <a href="../assignments/pdfs/2022-11-05-exercise06.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2022-11-19-exercise07.pdf">PDF version</a>
 	  
 	  
         </li>
     
         <li>
-          <a href="../assignments/2022-10-26-exercise05.html">Exercise sheet 5</a>
+          <a href="../assignments/2022-11-05-exercise06.html">Exercise sheet 6</a>
 	   /
-	  <a href="../assignments/pdfs/2022-10-26-exercise05.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2022-11-05-exercise06.pdf">PDF version</a>
 	  
 	  
         </li>
