--- a/assignments/2022-11-19-exercise07.html
+++ b/assignments/2022-11-19-exercise07.html
@@ -47,12 +47,13 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 03:23 PM - 19 November, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 03:27 PM - 19 November, 2022 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2022-11-19-exercise07.pdf">PDF version</a>
 	  
 	  
         <ol>
+<li><p>Compute the principal curvatures of a plane and a sphere.</p></li>
 <li><p>Show that if the second fundamental form is 0 at each point then the image of the surface patch must lie on a plane.</p></li>
 <li><p>Show that if the two principal curvatures of a surface are the same, then the surface lies on a plane or a sphere.</p></li>
 </ol>
